Fix issue with body height on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 #root {
-  height: 1px;
-  min-height: 100vh;
+  height: 100%;
   min-width: 100vw;
   display: flex;
   justify-content: center;
